--- a/devops-workshop-master/src/main/webapp/index.html
+++ b/devops-workshop-master/src/main/webapp/index.html
@@ -15,6 +15,7 @@
         </div>
         <form class="main" id="loginForm" onsubmit="login(event)">
             <input class="loginInput" placeholder="Brukernavn..." id="username" required pattern="([\w]+)">
+            <input class="loginInput" id="password" placeholder="Passord..." type="password" required pattern="([/w]+)">
             <button class="loginBtn">Logg inn</button>
         </form>
     </div>
