--- a/devops-workshop-master/src/main/webapp/index.html
+++ b/devops-workshop-master/src/main/webapp/index.html
@@ -16,7 +16,7 @@
         <form class="main" id="loginForm" onsubmit="login(event)">
             <input class="loginInput" placeholder="Brukernavn..." id="username" required pattern="([\w]+)">
             <input class="loginInput" id="password" placeholder="Passord..." type="password" required pattern="([/w]+)">
-            <button class="loginBtn">Logg inn</button>
+            <button class="loginBtn" id="Button" onclick="login()">Logg inn</button>
         </form>
     </div>
 <script type="text/javascript" src="./js/index.js"></script>
